OnCallProber/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prober
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prober
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: prober
